--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
@@ -154,6 +154,12 @@
     <Filter Include="Source Files\Game\Components\Boss\Mines">
       <UniqueIdentifier>{5eac4d6f-c0dd-47ec-81ff-0afd5c0505a8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Game\Components\Player\States">
+      <UniqueIdentifier>{5afd3d5f-04e0-4583-82e0-7caa4205aa24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Game\Components\Player\States">
+      <UniqueIdentifier>{14ffcff9-22f1-4477-b4ca-d5f9fc9297cb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -329,6 +335,18 @@
     </ClCompile>
     <ClCompile Include="ImageRenderer.cpp">
       <Filter>Source Files\Engine\Misc</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerState_GracePeriod.cpp">
+      <Filter>Source Files\Game\Components\Player\States</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerState_Spawning.cpp">
+      <Filter>Source Files\Game\Components\Player\States</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerState_Flying.cpp">
+      <Filter>Source Files\Game\Components\Player\States</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerState_Exploding.cpp">
+      <Filter>Source Files\Game\Components\Player\States</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -529,6 +547,21 @@
     </ClInclude>
     <ClInclude Include="ImageRenderer.h">
       <Filter>Header Files\Engine\Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState.h">
+      <Filter>Header Files\Game\Components\Player\States</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState_GracePeriod.h">
+      <Filter>Header Files\Game\Components\Player\States</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState_Spawning.h">
+      <Filter>Header Files\Game\Components\Player\States</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState_Exploding.h">
+      <Filter>Header Files\Game\Components\Player\States</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState_Flying.h">
+      <Filter>Header Files\Game\Components\Player\States</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
