--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
@@ -348,6 +348,9 @@
     <ClCompile Include="PlayerState_Exploding.cpp">
       <Filter>Source Files\Game\Components\Player\States</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerState_Despawning.cpp">
+      <Filter>Source Files\Game\Components\Player\States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -561,6 +564,9 @@
       <Filter>Header Files\Game\Components\Player\States</Filter>
     </ClInclude>
     <ClInclude Include="PlayerState_Flying.h">
+      <Filter>Header Files\Game\Components\Player\States</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState_Despawning.h">
       <Filter>Header Files\Game\Components\Player\States</Filter>
     </ClInclude>
   </ItemGroup>
